@@ -1,7 +1,10 @@
 # ChangeLog for catalyst
-# Copyright 1999-2011 Gentoo Foundation; 2008-2011 Various authors (see AUTHORS)
+# Copyright 1999-2012 Gentoo Foundation; 2008-2011 Various authors (see AUTHORS)
 # Distributed under the GPL v2
 # $Id$
+
+  03 May 2012; Raúl Porcel <armin76@gentoo.org> arch/arm.py:
+  Add armv6j_hardfp
 
   26 Jun 2011; Matt Turner <mattst88@gentoo.org>
   targets/support/chroot-functions.sh:
